lib/src/flutter_ffi_uvc_bindings_generated.dart


  /// Returns JSON array of all controls the device supports, with min/max/def/cur/res fields.
  /// Returns number of bytes written, or 0 on failure.
  int uvc_ctrl_get_all_json(ffi.Pointer<ffi.Uint8> buffer, int buffer_length) {
    return _uvc_ctrl_get_all_json(buffer, buffer_length);
  }

  late final _uvc_ctrl_get_all_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_ctrl_get_all_json');
  late final _uvc_ctrl_get_all_json = _uvc_ctrl_get_all_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Returns JSON array of controls present in descriptor bmControls only.
  /// Debug helper: does not probe GET_CUR/GET_MIN/GET_MAX.
  int uvc_ctrl_get_bm_controls_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_ctrl_get_bm_controls_json(buffer, buffer_length);
  }

  late final _uvc_ctrl_get_bm_controls_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_ctrl_get_bm_controls_json');
  late final _uvc_ctrl_get_bm_controls_json = _uvc_ctrl_get_bm_controls_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Returns the current value of a control. Returns INT32_MIN on error.
  int uvc_ctrl_get(int ctrl_id) {
    return _uvc_ctrl_get(ctrl_id);
  }

  late final _uvc_ctrl_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int)>>('uvc_ctrl_get');
  late final _uvc_ctrl_get = _uvc_ctrl_getPtr.asFunction<int Function(int)>();

  /// Sets a control value. Returns 0 (UVC_SUCCESS) on success, negative on error.
  int uvc_ctrl_set(int ctrl_id, int value) {
    return _uvc_ctrl_set(ctrl_id, value);
  }

  late final _uvc_ctrl_setPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int32)>>(
        'uvc_ctrl_set',
      );
  late final _uvc_ctrl_set = _uvc_ctrl_setPtr
      .asFunction<int Function(int, int)>();

  /// Compound controls that cannot be represented as a single integer value.
  int uvc_get_white_balance_component_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_white_balance_component_json(buffer, buffer_length);
  }

  late final _uvc_get_white_balance_component_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_white_balance_component_json');
  late final _uvc_get_white_balance_component_json =
      _uvc_get_white_balance_component_jsonPtr
          .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_white_balance_component_values(int blue, int red) {
    return _uvc_set_white_balance_component_values(blue, red);
  }

  late final _uvc_set_white_balance_component_valuesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Uint16, ffi.Uint16)>>(
        'uvc_set_white_balance_component_values',
      );
  late final _uvc_set_white_balance_component_values =
      _uvc_set_white_balance_component_valuesPtr
          .asFunction<int Function(int, int)>();

  int uvc_get_focus_rel_json(ffi.Pointer<ffi.Uint8> buffer, int buffer_length) {
    return _uvc_get_focus_rel_json(buffer, buffer_length);
  }

  late final _uvc_get_focus_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_focus_rel_json');
  late final _uvc_get_focus_rel_json = _uvc_get_focus_rel_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_focus_rel_values(int focus_rel, int speed) {
    return _uvc_set_focus_rel_values(focus_rel, speed);
  }

  late final _uvc_set_focus_rel_valuesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int8, ffi.Uint8)>>(
        'uvc_set_focus_rel_values',
      );
  late final _uvc_set_focus_rel_values = _uvc_set_focus_rel_valuesPtr
      .asFunction<int Function(int, int)>();

  int uvc_get_zoom_rel_json(ffi.Pointer<ffi.Uint8> buffer, int buffer_length) {
    return _uvc_get_zoom_rel_json(buffer, buffer_length);
  }

  late final _uvc_get_zoom_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_zoom_rel_json');
  late final _uvc_get_zoom_rel_json = _uvc_get_zoom_rel_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_zoom_rel_values(int zoom_rel, int digital_zoom, int speed) {
    return _uvc_set_zoom_rel_values(zoom_rel, digital_zoom, speed);
  }

  late final _uvc_set_zoom_rel_valuesPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int8, ffi.Uint8, ffi.Uint8)>
      >('uvc_set_zoom_rel_values');
  late final _uvc_set_zoom_rel_values = _uvc_set_zoom_rel_valuesPtr
      .asFunction<int Function(int, int, int)>();

  int uvc_get_pantilt_abs_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_pantilt_abs_json(buffer, buffer_length);
  }

  late final _uvc_get_pantilt_abs_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_pantilt_abs_json');
  late final _uvc_get_pantilt_abs_json = _uvc_get_pantilt_abs_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_pantilt_abs_values(int pan, int tilt) {
    return _uvc_set_pantilt_abs_values(pan, tilt);
  }

  late final _uvc_set_pantilt_abs_valuesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int32, ffi.Int32)>>(
        'uvc_set_pantilt_abs_values',
      );
  late final _uvc_set_pantilt_abs_values = _uvc_set_pantilt_abs_valuesPtr
      .asFunction<int Function(int, int)>();

  int uvc_get_pantilt_rel_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_pantilt_rel_json(buffer, buffer_length);
  }

  late final _uvc_get_pantilt_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_pantilt_rel_json');
  late final _uvc_get_pantilt_rel_json = _uvc_get_pantilt_rel_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_pantilt_rel_values(
    int pan_rel,
    int pan_speed,
    int tilt_rel,
    int tilt_speed,
  ) {
    return _uvc_set_pantilt_rel_values(
      pan_rel,
      pan_speed,
      tilt_rel,
      tilt_speed,
    );
  }

  late final _uvc_set_pantilt_rel_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Int8, ffi.Uint8, ffi.Int8, ffi.Uint8)
        >
      >('uvc_set_pantilt_rel_values');
  late final _uvc_set_pantilt_rel_values = _uvc_set_pantilt_rel_valuesPtr
      .asFunction<int Function(int, int, int, int)>();

  int uvc_get_roll_rel_json(ffi.Pointer<ffi.Uint8> buffer, int buffer_length) {
    return _uvc_get_roll_rel_json(buffer, buffer_length);
  }

  late final _uvc_get_roll_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_roll_rel_json');
  late final _uvc_get_roll_rel_json = _uvc_get_roll_rel_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_roll_rel_values(int roll_rel, int speed) {
    return _uvc_set_roll_rel_values(roll_rel, speed);
  }

  late final _uvc_set_roll_rel_valuesPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int8, ffi.Uint8)>>(
        'uvc_set_roll_rel_values',
      );
  late final _uvc_set_roll_rel_values = _uvc_set_roll_rel_valuesPtr
      .asFunction<int Function(int, int)>();

  int uvc_get_digital_window_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_digital_window_json(buffer, buffer_length);
  }

  late final _uvc_get_digital_window_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_digital_window_json');
  late final _uvc_get_digital_window_json = _uvc_get_digital_window_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_digital_window_values(
    int window_top,
    int window_left,
    int window_bottom,
    int window_right,
    int num_steps,
    int num_steps_units,
  ) {
    return _uvc_set_digital_window_values(
      window_top,
      window_left,
      window_bottom,
      window_right,
      num_steps,
      num_steps_units,
    );
  }

  late final _uvc_set_digital_window_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
          )
        >
      >('uvc_set_digital_window_values');
  late final _uvc_set_digital_window_values = _uvc_set_digital_window_valuesPtr
      .asFunction<int Function(int, int, int, int, int, int)>();

  int uvc_get_region_of_interest_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_region_of_interest_json(buffer, buffer_length);
  }

  late final _uvc_get_region_of_interest_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_region_of_interest_json');
  late final _uvc_get_region_of_interest_json =
      _uvc_get_region_of_interest_jsonPtr
          .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_set_region_of_interest_values(
    int roi_top,
    int roi_left,
    int roi_bottom,
    int roi_right,
    int auto_controls,
  ) {
    return _uvc_set_region_of_interest_values(
      roi_top,
      roi_left,
      roi_bottom,
      roi_right,
      auto_controls,
    );
  }

  late final _uvc_set_region_of_interest_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
          )
        >
      >('uvc_set_region_of_interest_values');
  late final _uvc_set_region_of_interest_values =
      _uvc_set_region_of_interest_valuesPtr
          .asFunction<int Function(int, int, int, int, int)>();
}

typedef uvc_frame_listener_tFunction = ffi.Void Function(ffi.Int64 sequence);
typedef Dartuvc_frame_listener_tFunction = void Function(int sequence);
typedef uvc_frame_listener_t =
    ffi.Pointer<ffi.NativeFunction<uvc_frame_listener_tFunction>>;
typedef uvc_error_listener_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.Char> message);
typedef Dartuvc_error_listener_tFunction =
    void Function(ffi.Pointer<ffi.Char> message);
typedef uvc_error_listener_t =
    ffi.Pointer<ffi.NativeFunction<uvc_error_listener_tFunction>>;

const int UVC_CTRL_ID_BRIGHTNESS = 1;

const int UVC_CTRL_ID_CONTRAST = 2;

const int UVC_CTRL_ID_HUE = 3;

const int UVC_CTRL_ID_SATURATION = 4;

const int UVC_CTRL_ID_SHARPNESS = 5;

const int UVC_CTRL_ID_GAMMA = 6;

const int UVC_CTRL_ID_GAIN = 7;

const int UVC_CTRL_ID_BACKLIGHT_COMPENSATION = 8;

const int UVC_CTRL_ID_WHITE_BALANCE_TEMPERATURE = 9;

const int UVC_CTRL_ID_WHITE_BALANCE_TEMP_AUTO = 10;

const int UVC_CTRL_ID_POWER_LINE_FREQUENCY = 11;

const int UVC_CTRL_ID_CONTRAST_AUTO = 12;

const int UVC_CTRL_ID_HUE_AUTO = 13;

const int UVC_CTRL_ID_WHITE_BALANCE_COMPONENT_AUTO = 14;

const int UVC_CTRL_ID_DIGITAL_MULTIPLIER = 15;

const int UVC_CTRL_ID_DIGITAL_MULTIPLIER_LIMIT = 16;

const int UVC_CTRL_ID_ANALOG_VIDEO_STANDARD = 17;

const int UVC_CTRL_ID_ANALOG_LOCK_STATUS = 18;

const int UVC_CTRL_ID_EXPOSURE_ABS = 20;

const int UVC_CTRL_ID_AE_MODE = 21;

const int UVC_CTRL_ID_AE_PRIORITY = 22;

const int UVC_CTRL_ID_FOCUS_ABS = 23;

const int UVC_CTRL_ID_FOCUS_AUTO = 24;

const int UVC_CTRL_ID_ZOOM_ABS = 25;

const int UVC_CTRL_ID_SCANNING_MODE = 26;

const int UVC_CTRL_ID_EXPOSURE_REL = 27;

const int UVC_CTRL_ID_IRIS_ABS = 28;

const int UVC_CTRL_ID_IRIS_REL = 29;

const int UVC_CTRL_ID_ROLL_ABS = 30;

const int UVC_CTRL_ID_PRIVACY = 31;

const int UVC_CTRL_ID_FOCUS_SIMPLE = 32;
